--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -60,7 +60,7 @@
   <script src="vendor/jqueryui/jquery-ui.min.js?__inline=true"></script>
   <script src="vendor/jquery.loadTemplate-1.4.5.min.js?__inline=true"></script>
   <script src="vendor/spin.js?__inline=true"></script>
-  <script src="vendor/msdropdown/jquery.msdropdown.min.js?__inline=true"></script>
+  <script src="vendor/msdropdown/jquery.msdropdown.js?__inline=true"></script>
   <script src="vendor/slabtext/slabtext.js?__inline=true"></script>
   <script src="vendor/raphael.min.js?__inline=true"></script>
   <script src="vendor/i18next.min.js?__inline=true"></script>
@@ -234,21 +234,21 @@
               </label>
               <div class="controls">
                 <select id="EgressRegion" data-usesprite="f32" data-roundedcorner=no>
-                  <option value="" class="flag flag-unknown" selected
+                  <option class="flag-unknown" value="" selected
                           data-i18n="settings#egress-region#select-best-performance">
                     Best Performance
                   </option>
-                  <option value="US" class="flag us"
+                  <option class="flag-us" value="US"
                           data-i18n="settings#egress-region#select-us">United States</option>
-                  <option value="GB" class="flag gb"
+                  <option class="flag-gb" value="GB"
                           data-i18n="settings#egress-region#select-gb">United Kingdom</option>
-                  <option value="JP" class="flag jp"
+                  <option class="flag-jp" value="JP"
                           data-i18n="settings#egress-region#select-jp">Japan</option>
-                  <option value="SG" class="flag sg"
+                  <option class="flag-sg" value="SG"
                           data-i18n="settings#egress-region#select-sg">Singapore</option>
-                  <option value="NL" class="flag nl"
+                  <option class="flag-nl" value="NL"
                           data-i18n="settings#egress-region#select-nl">Netherlands</option>
-                  <option value="DE" class="flag de"
+                  <option class="flag-de" value="DE"
                           data-i18n="settings#egress-region#select-de">Germany</option>
                 </select>
               </div>
