--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -74,7 +74,9 @@
 
   <div class="psiphon-header">
     <div class="logo">
-      <img src="logo.png">
+      <a href="#">
+        <img src="logo.png">
+      </a>
     </div>
     <div class="text-center banner">
       <img src="">
