Added banner click

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -18547,6 +18547,11 @@ $(function() {
 
   // The banner image filename is parameterized.
   $('.banner img').attr('src', g_initObj.Config.Banner);
+  // Let the C-code decide what should be opened when the banner is clicked.
+  $('.banner a').on('click', function(e) {
+    e.preventDefault();
+    HtmlCtrlInterface_BannerClick();
+  });
 
   // Update the size of our tab content element when the window resizes...
   var lastWindowHeight = $window.height();
@@ -19390,6 +19395,18 @@ function HtmlCtrlInterface_SetCookies(cookiesJSON) {
   }, 1);
 }
 
+function HtmlCtrlInterface_BannerClick() {
+  setTimeout(function() {
+    var appURL = PSIPHON_LINK_PREFIX + 'bannerclick';
+    if (IS_BROWSER) {
+      console.log(appURL);
+    }
+    else {
+      window.location = appURL;
+    }
+  }, 1);
+}
+
 
 /* EXPORTS */
 
@@ -19413,7 +19430,9 @@ window.HtmlCtrlInterface_SetState = HtmlCtrlInterface_SetState;
       </a>
     </div>
     <div class="text-center banner">
-      <img src="">
+      <a href="#">
+        <img src="">
+      </a>
     </div>
   </div>
 
