--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -79,7 +79,9 @@
       </a>
     </div>
     <div class="text-center banner">
-      <img src="">
+      <a href="#">
+        <img src="">
+      </a>
     </div>
   </div>
 
