Enable split tunnel setting and integrate with split tunnel functionality in core

--- a/src/webui/settings.html
+++ b/src/webui/settings.html
@@ -267,10 +267,10 @@ html {
     </fieldset>
   </div>
 
-  <div class="setting-item vpn-incompatible perma-disabled">
-    <input type="checkbox" id="SplitTunnel" disabled/>
+  <div class="setting-item vpn-incompatible">
+    <input type="checkbox" id="SplitTunnel" />
     <label for="SplitTunnel">
-      <strong>Don't proxy domestic websites (Not yet supported!)</strong>
+      <strong>Don't proxy domestic websites</strong>
       <span class="vpn-incompatible-msg"><em>(Doesn't work with VPN mode.)</em></span>
     </label>
     <div class="checkbox-description setting-description">
