--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -542,6 +542,7 @@
           </script>
         </div><!-- /language-pane -->
 
+
         <!-- ABOUT ======================================================-->
         <div class="tab-pane fade" id="about-pane">
           <h1 data-i18n="[html]about#head">
@@ -556,14 +557,14 @@
           <p data-i18n="[html]about#visit-download-site">
             To <strong>download a new version</strong> of Psiphon, or to
             <strong>get help and more information</strong>, please
-            <a href="#" id="about-info-url">visit the website</a>.
+            <a id="about-info-url" href="#">visit the website</a>.
           </p>
           <p>
             <span data-i18n="[html]about#get-by-email">
               <strong>If the website is inaccessible</strong>, you can get a new
               version of Psiphon by sending an email to:
             </span>
-            <a href="mailto:get@example.com" id="about-email">get@example.com</a>
+            <a id="about-email" href="#"></a>
           </p>
           <p data-i18n="[html]about#visit-company-site">
             To find out more about Psiphon Inc. please visit our
