--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -79,6 +79,9 @@
       </a>
     </div>
     <div class="text-center banner">
+      <div data-i18n="banner#sponsored-by">
+        Sponsored by
+      </div>
       <a href="#">
         <img src="">
       </a>
